# enterprise-netauto-platform

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  handover-2026-03-06.md  pyproject.toml  requirements.txt
.github/workflows/: bgp_ci.yml
ai/: README.md  mcp_server.py
ai/agents/: agent.py
ansible/: ansible.cfg
ansible/inventory/: hosts.ini
ansible/playbooks/: ntp_server.yml  syslog_server.yml
automation/: config.py  nornir_config.yaml  runner.py  test_connection.py
automation/drift/: detector.py
automation/inventory/: defaults.yaml  groups.yaml  hosts.yaml  nautobot_inventory.py  nautobot_runner.py  netbox_inventory.py  netbox_seed.py  runner.py  seed_netbox.py
automation/rollback/: rollback.py
automation/tasks/: deploy_config.py  deploy_interfaces.py
automation/templates/: renderer.py
automation/transports/: restconf.py
automation/utils/: logger.py
automation/validators/: checks.py
automation/workflows/: bgp_workflow.py  deploy_interfaces_workflow.py  nat_workflow.py  ospf_workflow.py
containerlab/: topology.yml
containerlab/clab-enterprise-netauto-lab/: ansible-inventory.yml  nornir-simple-inventory.yml  topology-data.json
containerlab/configs/: arista-01-initial.cfg  arista-01-running.cfg  arista-02-initial.cfg  arista-02-running.cfg  host-01-state.txt  host-02-state.txt  rtr-01-initial.cfg  rtr-01-running.cfg  (+4 more)
docs/: automation_feature_roadmap.md  netbox.md  working_roadmap.md
nautobot/: docker-compose.yml
telemetry/: README.md  docker-compose.yml  gnmic.yml  prometheus.yml  snmp.yml
tests/: testbed.yaml
(+77 files in other folders)
